hphp/hack/test/typecheck/new_inference/instance_of_refinement.php.exp
ERROR: File "instance_of_refinement.php", line 25, characters 16-17:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 20, characters 14-15:
  But got `string`
ERROR: File "instance_of_refinement.php", line 43, characters 13-14:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 42, characters 13-16:
  Expected `T#2` from this `is` expression test
  File "instance_of_refinement.php", line 10, characters 23-23:
    via this generic `T`
  File "instance_of_refinement.php", line 43, characters 13-14:
  But got `string`
ERROR: File "instance_of_refinement.php", line 44, characters 16-24:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 7, characters 26-26:
  But got `mixed` arising from an implicit `as mixed` constraint on this type
ERROR: File "instance_of_refinement.php", line 44, characters 16-24:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 42, characters 13-16:
  But got `T#2` from this `is` expression test
  File "instance_of_refinement.php", line 7, characters 26-26:
    via this generic `T`
ERROR: File "instance_of_refinement.php", line 52, characters 16-24:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 7, characters 26-26:
  But got `mixed` arising from an implicit `as mixed` constraint on this type
ERROR: File "instance_of_refinement.php", line 52, characters 16-24:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 49, characters 14-15:
  But got `string`
ERROR: File "instance_of_refinement.php", line 52, characters 16-24:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 50, characters 13-16:
  But got `(_ & T#2)` from this `is` expression test
ERROR: File "instance_of_refinement.php", line 52, characters 16-24:
Invalid argument (Typing[4110])
  File "instance_of_refinement.php", line 17, characters 21-23:
  Expected `int`
  File "instance_of_refinement.php", line 50, characters 13-16:
  But got `T#2` from this `is` expression test
  File "instance_of_refinement.php", line 7, characters 26-26:
    via this generic `T`
WARN: File "instance_of_refinement.php", line 22, characters 7-20:
This `is` check is always `true`. The expression on the left has type `string` which is a subtype of `arraykey`. (Warn[12009])
WARN: File "instance_of_refinement.php", line 35, characters 7-13:
This `is` check is always `false`. The expression on the left has type `string` which shares no values with `B`. (Warn[12010])
WARN: File "instance_of_refinement.php", line 50, characters 7-16:
This `is` check is always `true`. The expression on the left has type `A<string>` which is a subtype of `A<string>`. (Warn[12009])
WARN: File "instance_of_refinement.php", line 63, characters 14-25:
This `is` check is always `true`. The expression on the left has type `string` which is a subtype of `string`. (Warn[12009])
